partconf (0.21) UNRELEASED; urgency=low

  * Stephen R. Marenka
    - Make sure p->descriptions gets a default.
  * Translators:
    - Peter Mann: Update Slovak translation
    - Carlos Z.F. Liu
      - fix some serious errors in Simplified Chinese translation.
    - Giuseppe Sacco
      - Applied patch for normalizing menus and some italian translation (it.po)
    - h3li0s
      - added albanian translation (sq.po)
    - Jordi Mallach
      - Update Catalan translation (ca.po).

 -- Stephen R. Marenka <marenks@marenka.net>  Fri, 23 Jan 2004 13:12:14 -0600

partconf (0.20) unstable; urgency=low

  * Giuseppe Sacco
    - Corrected file encoding (it.po)
  * Joey Hess
    - Make partconf-mkfstab not fail if /target/etc does not yet exist,
      as it does not with the new combined base-installer that depends
      on partconf-mkfstab.
  * Bart Cornelis
    - Fix typo in Dutch (nl.po) translation, tnx to Bastiaan Van
      Eeckhoudt for reporting this
    - small update to Dutch translation as a result of [DICO] discussion on
      debian-l10n-dutch@l.d.o
  * Anmar Oueja
    - created and translated to Arabic (ar.po)
  * Nikolai Prokoschenko
    - updated russian translation
  * Dennis Stampfer
    - Update German translation (de.po)
  * Safir Secerovic
    - Update Bosnian translation (bs.po). 

 -- Joey Hess <joeyh@debian.org>  Thu, 22 Jan 2004 19:31:49 -0500

partconf (0.19) unstable; urgency=low

  * Bartosz Fenski
    - Updated Polish (pl) translation.
  * Ming Hua
    - Initial Simplified Chinese translation (zh_CN.po)
  * Bart Cornelis
    - Merged Norwegian Nynorsk (nn.po) translation from skolelinux-cvs
  * Giuseppe Sacco
    - Updated italian translation
  * Christian Perrier
    - s/in turn/in order in templates for better English
    - make the templates which ask for action on existing
      file systems coherent with the similar template asking
      for action when no file system exist
    - run debconf-updatepo
    - unfuzzied translations
