@@ -2,6 +2,7 @@ partconf (0.21) UNRELEASED; urgency=low
 
   * Stephen R. Marenka
     - Make sure p->descriptions gets a default.
+    - Add simulated devfs support for kernel 2.2.x.
   * Translators:
     - Peter Mann: Update Slovak translation
     - Carlos Z.F. Liu
